Kan bare endre behtype om ENDRET_PERIODE eller NY_VURDERING